--- a/pages/home.htm
+++ b/pages/home.htm
@@ -6,6 +6,24 @@ layout = "default"
 	<!-- Hero section -->
 	<section class="hero-section">
 		<div class="hero-slider owl-carousel">
+		{% if (this.theme.hero_image|length > 0)%}
+		{% for slide in this.theme.hero_image %}
+			<div class="hs-item set-bg" data-setbg="{{ slide.image|media }}">
+				<div class="hs-text">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-8">
+								<div class="hs-subtitle">{{ slide.subtitle }}</div>
+								<h2 class="hs-title">{{ slide.title }}</h2>
+								<p class="hs-des">{{ slide.description }}</p>
+								<div class="site-btn">{{ this.theme.hero_button_text }}</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		{% endfor %}
+		{% else %}		
 			<div class="hs-item set-bg" data-setbg="{{'assets/img/hero-slider/1.jpg'|theme }}">
 				<div class="hs-text">
 					<div class="container">
@@ -34,6 +52,7 @@ layout = "default"
 					</div>
 				</div>
 			</div>
+		{% endif %}
 		</div>
 	</section>
 	<!-- Hero section end -->
@@ -52,14 +71,6 @@ layout = "default"
 						<p><i class="fa fa-calendar-o"></i>07:00 PM - 09:00 PM</p>
 					</div>
 				</div>
-{# 				<div class="col-lg-5 col-md-6">
-					<div class="counter">
-						<div class="counter-item"><h4>20</h4>Days</div>
-						<div class="counter-item"><h4>08</h4>Hrs</div>
-						<div class="counter-item"><h4>40</h4>Mins</div>
-						<div class="counter-item"><h4>56</h4>secs</div>
-					</div>
-				</div> #}
 			</div>
 		</div>
 	</section>
@@ -70,16 +81,29 @@ layout = "default"
 	<section class="service-section spad">
 		<div class="container services">
 			<div class="section-title text-center">
-				<h3>OUR SERVICES</h3>
-				<p>We provides the opportunity to prepare for life</p>
+				<h3>{{this.theme.service_title}}</h3>
+				<p>{{this.theme.service_subtitle}}</p>
 			</div>
 			<div class="row">
+			{% if (this.theme.services|length > 0)%}
+			{% for service in this.theme.services %}
+				<div class="col-lg-4 col-sm-6 service-item">
+					<div class="service-icon">
+						<img src="{{ service.image|media }}" alt="{{ service.title }}">
+					</div>
+					<div class="service-content">
+						<h4>{{ service.title }}</h4>
+						<p>{{ service.description }}</p>
+					</div>
+				</div>
+			{% endfor %}
+			{% else %}
 				<div class="col-lg-4 col-sm-6 service-item">
 					<div class="service-icon">
 						<img src="{{ 'assets/img/services-icons/1.png'|theme }}" alt="1">
 					</div>
 					<div class="service-content">
-						<h4>Art Studio</h4>
+						<h4>Great Facility</h4>
 						<p>Lorem ipsum dolor sitdo amet, consectetur dont adipis elit. Vivamus interdum ultrices augue. Aenean dos cursus lania.</p>
 					</div>
 				</div>
@@ -128,6 +152,7 @@ layout = "default"
 						<p>Lorem ipsum dolor sitdo amet, consectetur dont adipis elit. Vivamus interdum ultrices augue. Aenean dos cursus lania.</p>
 					</div>
 				</div>
+			{% endif %}
 			</div>
 		</div>
 	</section>
@@ -135,15 +160,24 @@ layout = "default"
 
 	
 	<!-- Enroll section -->
-	<section class="enroll-section spad set-bg" data-setbg="{{'assets/img/enroll-bg.jpg'|theme }}">
+	<section class="enroll-section spad set-bg" data-setbg="{% if (this.theme.enroll_bgimage|length > 0)%}{{ this.theme.enroll_bgimage|media }} {% else %}{{'assets/img/enroll-bg.jpg'|theme }} {% endif %}">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-5">
 					<div class="section-title text-white">
-						<h3>ENROLLMENT</h3>
-						<p>Get started with us to explore the exciting</p>
+						<h3>{{ this.theme.enroll_title }}</h3>
+						<p>{{ this.theme.enroll_subtitle}}</p>
 					</div>
 					<div class="enroll-list text-white">
+					{% if (this.theme.enroll|length > 0)%}
+					{% for item in this.theme.enroll %}
+						<div class="enroll-list-item">
+							<span>{{ item.title }}</span>
+							<h5>{{ item.name }}</h5>
+							<p>{{ item.description }}</p>
+						</div>
+					{% endfor %}
+					{% else %}
 						<div class="enroll-list-item">
 							<span>1</span>
 							<h5>Contact</h5>
@@ -159,10 +193,11 @@ layout = "default"
 							<h5>Register</h5>
 							<p>Lorem ipsum dolor sitdo amet, consectetur dont adipis elit. Vivamus interdum ultrices augue.</p>
 						</div>
+					{% endif %}
 					</div>
 				</div>
 				<div class="col-lg-6 offset-lg-1 p-lg-0 p-4">
-					<img src="{{'assets/img/encroll-img.jpg'|theme }}" alt="">
+					<img src="{% if (this.theme.enroll_image|length > 0 )%} {{this.theme.enroll_image|media}} {% else %}{{'assets/img/encroll-img.jpg'|theme }} {% endif %}" alt="">
 				</div>
 			</div>
 		</div>
@@ -263,9 +298,22 @@ layout = "default"
 
 
 	<!-- Fact section -->
-	<section class="fact-section spad set-bg" data-setbg="{{'assets/img/fact-bg.jpg'|theme }}">
+	<section class="fact-section spad set-bg" data-setbg="{% if (this.theme.facts_bgimage|length > 0 ) %}{{ this.theme.facts_bgimage|media}} {% else %}{{'assets/img/fact-bg.jpg'|theme }} {% endif %}">
 		<div class="container">
 			<div class="row">
+			{% if (this.theme.facts|length > 0)%}
+			{% for item in this.theme.facts %}
+				<div class="col-sm-6 col-lg-3 fact">
+					<div class="fact-icon">
+						<i class="{{ item.icon }}"></i>
+					</div>
+					<div class="fact-text">
+						<h2>{{ item.quantity }}</h2>
+						<p>{{ item.title }}</p>
+					</div>
+				</div>
+			{% endfor %}
+			{% else %}
 				<div class="col-sm-6 col-lg-3 fact">
 					<div class="fact-icon">
 						<i class="ti-crown"></i>
@@ -302,6 +350,7 @@ layout = "default"
 						<p>LESSONS</p>
 					</div>
 				</div>
+			{% endif %}
 			</div>
 		</div>
 	</section>
