--- a/pages/home.htm
+++ b/pages/home.htm
@@ -16,7 +16,7 @@ layout = "default"
 								<div class="hs-subtitle">{{ slide.subtitle }}</div>
 								<h2 class="hs-title">{{ slide.title }}</h2>
 								<p class="hs-des">{{ slide.description }}</p>
-								<div class="site-btn">{{ this.theme.hero_button_text }}</div>
+								<a href="{{ this.theme.hero_button_url }}"><div class="site-btn">{{ this.theme.hero_button_text }}</div></a>
 							</div>
 						</div>
 					</div>
@@ -32,7 +32,7 @@ layout = "default"
 								<div class="hs-subtitle">Award Winning UNIVERSITY</div>
 								<h2 class="hs-title">An investment in knowledge pays the best interest.</h2>
 								<p class="hs-des">Education is not just about going to school and getting a degree. It's about widening your<br> knowledge and absorbing the truth about life. Knowledge is power.</p>
-								<div class="site-btn">GET STARTED</div>
+								<a href="#"><div class="site-btn">GET STARTED</div></a>
 							</div>
 						</div>
 					</div>
@@ -46,7 +46,7 @@ layout = "default"
 								<div class="hs-subtitle">Award Winning UNIVERSITY</div>
 								<h2 class="hs-title">An investment in knowledge pays the best interest.</h2>
 								<p class="hs-des">Education is not just about going to school and getting a degree. It's about widening your<br> knowledge and absorbing the truth about life. Knowledge is power.</p>
-								<div class="site-btn">GET STARTED</div>
+								<a href="#"><div class="site-btn">GET STARTED</div></a>
 							</div>
 						</div>
 					</div>
