--- a/pages/post.htm
+++ b/pages/post.htm
@@ -28,7 +28,7 @@ categoryPage = "blog"
 	<!-- Breadcrumb section -->
 	<div class="site-breadcrumb">
 		<div class="container">
-			<a href="{{ 'home'|page }}"><i class="fa fa-home"></i> Home</a> <i class="fa fa-angle-right"></i>
+			<a href="{{ 'home'|page }}"><i class="fa fa-home"></i> {{'Главное'|_ }}</a> <i class="fa fa-angle-right"></i>
 			<span>{{this.page.title}}</span>
 		</div>
 	</div>
@@ -63,7 +63,7 @@ categoryPage = "blog"
 				<div class="col-sm-8 col-md-5 col-lg-4 col-xl-3 offset-xl-1 offset-0 pl-xl-0 sidebar">
 					<!-- widget -->
 					<div class="widget">
-						<h5 class="widget-title">Recent News</h5>
+						<h5 class="widget-title">{{'Последние новости'|_ }}</h5>
 						<div class="recent-post-widget">
 							<!-- recent post -->
                             {% for post in posts %}
@@ -83,7 +83,7 @@ categoryPage = "blog"
 						</div>
 					</div>
 					<div class="widget">
-						<h4 class="widget-title">Категорий</h4>
+						<h4 class="widget-title">{{'Категорий'|_ }}</h4>
 						{#categori list#}
 						{% if blogCategories.categories|length > 0 %}
 							<ul>
