add new method translate

--- a/pages/about.htm
+++ b/pages/about.htm
@@ -12,8 +12,8 @@ is_hidden = 0
 	<section class="about-section spad pt-0">
 		<div class="container">
 			<div class="section-title text-center">
-				<h3>{{ this.theme.about_title|_ }}</h3>
-				<p>{{ this.theme.about_subtitle|_ }}</p>
+				<h3>{{ this.theme.about_title }}</h3>
+				<p>{{ this.theme.about_subtitle }}</p>
 			</div>
 			<div class="row">
 				<div class="col-lg-6 about-text">
