--- a/pages/contact.htm
+++ b/pages/contact.htm
@@ -13,11 +13,11 @@ is_hidden = 0
 			<div class="map-section">
 				<div class="contact-info-warp">
 					<div class="contact-info">
-						<h4>Address</h4>
+						<h4>{{'Адрес'|_}}</h4>
 						<a target="_blank" href="{{this.theme.company_address_url}}"><p>{{ this.theme.company_address }}</p></a>
 					</div>
 					<div class="contact-info">
-						<h4>Mobile Phone</h4>
+						<h4>{{'Сот телефон'|_}}</h4>
 						<a href="tel:{{this.theme.company_mobile_number}}"><p>{{ this.theme.company_mobile_number }}</p></a>
 					</div>
 					<div class="contact-info">
@@ -25,7 +25,7 @@ is_hidden = 0
 						<a href="mailto:{{this.theme.company_email}}"><p>{{this.theme.company_email}}</p></a>
 					</div>
 					<div class="contact-info">
-						<h4>Working time</h4>
+						<h4>{{'Рабочее время'|_}}:</h4>
 						<p>{{ this.theme.company_work_time }}</p>
 					</div>
 				</div>
